--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,12 +19,19 @@ tail_includes:
     </span>
 
     <!-- lastmod date -->
+ 
+    {% if false %}
     {% if page.last_modified_at %}
+
     <span>
       {{ site.data.locales[site.lang].post.updated }}
       {% include datetime.html date=page.last_modified_at tooltip=true %}
+      三木
     </span>
+
     {% endif %}
+    {% endif %}
+
 
   {% if page.image %}
     {% capture src %}src="{{ page.image.path | default: page.image }}"{% endcapture %}
