--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -20,10 +20,11 @@ layout: page
 
   <li>
   {% assign ts = post.date | date: '%s' %}
-    <span class="date day" data-ts="{{ ts }}" data-df="DD">{{ post.date | date: "%d" }}</span>
-    <span class="date month small text-muted ml-1" data-ts="{{ ts }}" data-df="{{ df_dayjs_m }}">
+    <span class="date small" data-ts="{{ ts }}" data-df="{{ df_dayjs_m }}">
       {{ post.date | date: df_strftime_m }}
     </span>
+    <span class="date small" data-ts="{{ ts }}" data-df="D日">{{ post.date | date: "%d" }}</span>
+
     <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
   </li>
 
