--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,6 +47,16 @@
 
   {{ seo_tags }}
 
+{% if page.twitter-card %}
+<meta name="twitter:card" content="{{ page.twitter-card }}"  />
+<meta name="twitter:image" content="{{ site.url }}/assets/{{ page.og-image }}" />
+<meta property="og:image" content="{{ site.url }}/assets/{{ page.og-image }}" />
+{% else %}
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:image" content="{{ site.url }}/assets/{{ site.avatar }}" />
+<meta property="og:image" content="{{ site.url }}/assets/{{ site.avatar }}" />
+{% endif %}
+
   <title>
   {%- unless page.layout == "home" -%}
     {{ page.title | append: " | "}}
